deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-webhook
  template:
    metadata:
      labels:
        app: pod-webhook
    spec:
      containers:
      - name: pod-webhook
        image: hysyeah/pod-webhook:v3
        imagePullPolicy: IfNotPresent
        command: ["/app/main"]
        args: ["-tls-cert-file=/keys/tls.crt","-tls-private-key-file=/keys/tls.key"]
        ports:
        - containerPort: 443
        volumeMounts:
        - name: tls-keys
          mountPath: /keys
      volumes:
        - name: tls-keys
          secret:
            secretName: pod-webhook-tls
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key


---
c
#  type: NodePort
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-webhook
webhooks:
  - name: pod.webhook.hysyeah.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
    failurePolicy: Ignore
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      # base64 -w 0 ca.crt
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EUXlNakV3TlRneE9Gb1hEVE16TURReE9URXdOVGd4T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTWR6CnM0VFJyZzZRQTR1eU1aNFppTHJpTXdSdFZBK1VmMnRYZmVmdW9MeVN1MmF3T1U3NnpVWFY1QkpyMHY1YlQ2MCsKTlpxYjFkenJ5SHExMytMajNYS0NZVUUxNjRBYWZkYStHUWlFN3p4SDNzT01yYXhJTzZYMkFIN0Q2UE5GenZhQgpzdUhxN2RkbHA5 [...]
       # 如果是集群外部服务,则需要指定URL并注释掉service
#      url: https://127.0.0.1:443/add-label
      service:
        name: pod-webhook
        namespace: default
        path: "/add-label"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-webhook
webhooks:
  - name:  pod.webhook.hysyeah.com
    clientConfig:
      # 如果是集群外部服务,则需要指定URL并注释掉service
#      url: https://127.0.0.1:7443/configmaps
      service:
        name: pod-webhook
        namespace: default
        path: "/configmaps"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJek1EUXlNakV3TlRneE9Gb1hEVE16TURReE9URXdOVGd4T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTWR6CnM0VFJyZzZRQTR1eU1aNFppTHJpTXdSdFZBK1VmMnRYZmVmdW9MeVN1MmF3T1U3NnpVWFY1QkpyMHY1YlQ2MCsKTlpxYjFkenJ5SHExMytMajNYS0NZVUUxNjRBYWZkYStHUWlFN3p4SDNzT01yYXhJTzZYMkFIN0Q2UE5GenZhQgpzdUhxN2RkbHA5 [...]
    rules:
      - operations: [ "CREATE", "UPDATE", "DELETE"]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["configmaps"]
    failurePolicy: Ignore
    sideEffects: None
    admissionReviewVersions:
      - v1
